1.2 (unreleased)
----------------

- fix problem with formalchemy validation [amleczko]


1.1 (2013-08-13)
----------------

- merge integration with penelope.trac [amleczko]


1.0 (2013-08-12)
----------------

- merge por.dashboard, por.models and por.gdata [amleczko]
